# graphql-minify-ex

./: .gitignore  README.md  checksum-Elixir.GraphQLMinify.Native.exs  download-hashes.sh  mix.exs  tag.sh
.github/workflows/: push.yaml  release.yaml
config/: config.exs  test.exs
lib/: graphql_minify.ex
lib/graphql_minify/: exception.ex  native.ex
native/graphql_minify_native/: Cargo.toml
native/graphql_minify_native/.cargo/: config.toml
native/graphql_minify_native/src/: lib.rs
test/: graphql_minify_test.exs
