[package]
name = "graphql_minify_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "graphql_minify_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
graphql-minify = "0.1.0"

rustler = "0.36.0"

# Provides a small build size, but takes more time to build.
[profile.release]
lto = true
